get newest news, update signup