@@ -1,6 +1,5 @@
 package com.example.thecoffeehouse.Utils;
 
-import com.example.thecoffeehouse.entity.user.Role;
 import com.example.thecoffeehouse.service.UserService;
 import com.example.thecoffeehouse.service.impl.AppUserServiceImpl;
 import org.springframework.beans.factory.annotation.Value;
@@ -28,6 +27,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 import javax.crypto.spec.SecretKeySpec;
 
 @Configuration
@@ -74,10 +74,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://10.30.100.178:8081"));
+//        configuration.setAllowedOrigins(Arrays.asList("http://192.168.0.104:8081"));
+        configuration.setAllowedOrigins(List.of("http://10.30.100.178:8081"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-        configuration.setExposedHeaders(Arrays.asList("x-auth-token"));
+        configuration.setExposedHeaders(List.of("x-auth-token"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
